# biomech_PCP

./: .gitignore  .lintr  1_collect_data.py  2_preprocess_data.py  3_process_video.py  4_train.py  5_inference.py  6_visualize_results.py  7_online_learning.py  EMGClass.py  EMG_Angle_Lag.py  ForceControlGui.py  ForceControlGui_Modified.py  ForceControlProcessing.py  ForceGUI.py  GUI_psyonic.py  README.md  Train_Upper_Model.py  Visualization_CyberGlove.py  ZZZZZZZ.py  advanced_emg_alignment_debug.py  calibdebug.py  collect_data.py  config.py  force_control_gui.py  format_data.ipynb  fullPageFigure.R  hardware_correction_snippet.py  hvat_submit.ipynb  initialization_experiments.ipynb  measured_demo.csv  offline_eval.ipynb  online_HS.py  online_predict.py  online_utils.py  paper_plots.ipynb  paper_plots.py  paper_runs.py  perturbation_investigation.ipynb  pixi.toml  (+61 more)
Analysis/: FreeSpace_Analysis.py  Interaction_Analysis.py  StandaloneModelComparison.py
Dynamics2/: Hand_4dof.py  Joint_1dof_Bilinear_NN.py  Joint_1dof_Crouch.py  Joint_1dof_Hogan.py  Joint_1dof_Shadmehr.py  Joint_1dof_Thelen.py  Joint_2dof_NN_multiply.py  Joint_Bilinear.py  Joint_Crouch.py  Joint_Hogan.py  Joint_Shadmehr.py  Joint_Thelen.py  Muscle_Crouch.py  Muscle_Hogan.py  Muscle_Shadmehr.py  Muscle_Thelen.py  rungeKuttaModule.py  upperLimbModel.py  upperLimbModel_copy.py
Plotting/: RangeBand.py
R_plots/: dataAmount.R  individualLines.R  movementOrdering.R  realTime.R  trajectories.R  trajectories_small.R
URDF/: ability_hand_left_large-wrist.urdf  ability_hand_left_large.urdf  ability_hand_right_large-wrist.urdf  ability_hand_right_large.urdf
archive/: derivations.ipynb  format_data.ipynb  predict.py  preprocess_all.py  process_mikeys_data.py  run_experiments.py  visualize_results.py
biomech_Shadmehr_Opt/: Train_Upper_Model.ipynb
dynamics/: BilinearJoints.py  Joint_1dof_Bilinear_NN.py  Muscle_bilinear.py  bilinear.py  hill.py  pyproject.toml  setup.py  utils.py
dynamics/dynamics.egg-info/: PKG-INFO  SOURCES.txt
(+136 files in other folders)
