[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "biomech_pcp"
version = "0.1.0"
authors = [
    {name = "Joris Gentinetta", email = "gentinetta.joris@gmail.com"},
    {name = "Michael Fernandez", email = "mfernan@media.mit.edu"}
]
description = "Biomechatronics Prosthesis Control Pipline"
readme = "README.md"
requires-python = ">=3.8,<3.9"

dependencies = [
    "pybullet>=3.25,<4",
    "mediapipe>=0.10.11,<0.11",
    "opencv-python>=4.12.0.88,<5",
    "imageio[ffmpeg]>=2.35.1,<3",
    "numpy>=1.24.4,<2",
    "pandas>=2.0.3,<3",
    "pyarrow>=17.0.0,<18",
    "zmq>=0.0.0,<0.0.1",
    "matplotlib>=3.7.5,<4",
    "scikit-learn>=1.3.2,<2",
    "tqdm>=4.67.1,<5",
    "torch>=2.4.1,<3",
    "wandb>=0.21.1,<0.22",
    "pyserial>=3.5,<4",
    "pyqt5>=5.15.11,<6",
    "pyqtgraph>=0.13.3,<0.14",
    "pyzmq>=27.0.1,<28",
    "scipy>=1.10.1,<2",
    "pillow>=10.4.0,<11",
    "pyyaml>=6.0.2,<7",
    "wget>=3.2,<4",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
biomech_PCP = { path = ".", editable = true }
dynamics = { path = "./dynamics", editable = true }

[tool.pixi.dependencies] # conda
pybullet = ">=3.25,<4"

[tool.ruff]
line-length = 88
target-version = "py38"


[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/biomech_pcp/helpers/psyonicControllers.py" = ["F821"]

